개인화 추천 및 파티/알림 기능 보완